kustomize/backend/overlays/demo-pwf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fint-betaling-backend
spec:
  template:
    spec:
      containers:
        - name: fint-betaling-backend-demo
          image: ghcr.io/fintlabs/fint-betaling-backend:sha-0000000
          resources:
            limits:
              memory: "5Gi"
              cpu: "2"
            requests:
              memory: "1Gi"
              cpu: "250m"
